# research_assistant

./: LICENSE  README.md  pyproject.toml
app-cli/: README.md  pyproject.toml
app-cli/app/: .env  server.py
app1/: README.md  pyproject.toml
app1/app/: .env
scripts/: research-assistant-youtube.ipynb
