[tool.poetry]
name = "research-assistant"
version = "0.1.0"
description = ""
authors = ["dsmueller3760 <dsm@danmueller.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-cli = "^0.0.20"
python-dotenv = "^1.0.0"
ipykernel = "^6.28.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
